remove errorprone for now bump java version to 17 add a contribute file, to describe how to get started when contributing bump gradle wrapper to 7.2 fix java and zomboid version related problems